syntax changes // created edit post.hbs

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -6,5 +6,5 @@
 <h4>{{username}}'s Posts</h4>
 <ul>
 {{#each posts}}
-<li>{{title}}<a href="./editpost/{{title}}">edit</a></li>
+<li>{{title}}<a href="./editpost/{{posts.id}}">edit</a></li>
 </ul>
