syntax changes//created index.hbs

--- a/views/editpost.hbs
+++ b/views/editpost.hbs
@@ -5,7 +5,7 @@
   <input type="text" name="title" id="title" value="{{post.title}}">
 </div>
 <div class="mb-3">
-  <textarea name="body" id="body"class="form-control">{{post.body}}</textarea>
+  <textarea name="body" id="body"class="form-control">{{post.body}}<hr>{{updatedAt}}</textarea>
 </div>
 <button class="btn brn-primary" id="submit">Submit</button>
 <button class="btn btn-danger" id="delete">Delete</button>
