logout function made .hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<p>This Project was developed as a means for registered users to have the opportunity to blog about tech related
+<p class="text-center">This Project was developed as a means for registered users to have the opportunity to blog about tech related
 topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
 developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
 year 2022.</p>
