--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 
-<div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">User Login</h5>
+<div class="container">
+  <div class="dialog">
+    <div class="content">
+      <div class="header">
+        <h5 class="title">User Login</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="body">
         <form>
           <div class="mb-3">
             <label for="username" class="form-label">username:</label>
@@ -18,7 +18,7 @@
           </div>
         </form>
       </div>
-      <div class="modal-footer">
+      <div class="footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="signup">Sign Up</button>
         <button type="button" id="login" class="btn btn-primary">Login</button>
