--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,4 +1,4 @@
-<h1>Register a new Account</h1>
+<h1>Register a New Account</h1>
 <form action="/api/user/register" method="POST">
 <div class="mb-3">
   <label for="username" class="form-label">Username:</label>
