--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,12 +18,13 @@
         </form>
       </div>
       <div class="footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="signup">Sign Up</button>
         <button type="button" id="login" class="btn btn-primary">Login</button>
       </div>
     </div>
   </div>
 </div>
+      <h4>Don't have an account? Register below</h4>
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="signup">Sign Up</button>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
