--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,11 +44,13 @@
 
     document.getElementById('login').addEventListener('click', async function (event) {
       event.preventDefault()
-
+    
       const { username, token } = await loginUser({
         username: document.getElementById('lUsername').value,
         password: document.getElementById('lPassword').value
       })
+      console.log(document.getElementById('lUsername').value)
+      console.log(document.getElementById('lPassword').value)
 
       if (token) {
         localStorage.setItem('username', username)
