fixed typo on login form

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
             <input type="text" name="lUsername" id="lUsername" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label">username:</label>
+            <label for="password" class="form-label">password:</label>
             <input type="password" name="lUsername" id="lPassword" class="form-control">
           </div>
         </form>
