--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -49,6 +49,7 @@
         username: document.getElementById('lUsername').value,
         password: document.getElementById('lPassword').value
       })
+      console.log(token)
 
       if (token) {
         localStorage.setItem('username', username)
