--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -49,11 +49,10 @@
         username: document.getElementById('lUsername').value,
         password: document.getElementById('lPassword').value
       })
-      console.log(data)
 
-      if (token) {
-        localStorage.setItem('username', username)
-        localStorage.setItem('token', token)
+      if (data.token) {
+        localStorage.setItem('username', data.username)
+        localStorage.setItem('token', data.token)
         location = '/dashboard'
       } else {
         alert('Invalid Username or Password. Please Try Again.')
