--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,7 +45,7 @@
     document.getElementById('login').addEventListener('click', async function (event) {
       event.preventDefault()
     
-      const data  = loginUser({
+      const data  = await loginUser({
         username: document.getElementById('lUsername').value,
         password: document.getElementById('lPassword').value
       })
