hotfix for data lines 53-55

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -49,10 +49,10 @@
         username: document.getElementById('lUsername').value,
         password: document.getElementById('lPassword').value
       })
-      console.log(data)
-      if (data.token) {
-        localStorage.setItem('username', data.username)
-        localStorage.setItem('token', data.token)
+      
+      if (data.data.token) {
+        localStorage.setItem('username', data.data.username)
+        localStorage.setItem('token', data.data.token)
         location = '/dashboard'
       } else {
         alert('Invalid Username or Password. Please Try Again.')
