--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,9 +2,8 @@
   <h1>Dashboard</h1>
   <p>Hello, {{username}} </p>
   <a href="/newpost">Blog About IT</a>
-  <p>View your post history</p>
-
-  <h4>{{username}}'s Posts</h4>
+  <p>Post history</p>
+  <h5>{{username}}'s Posts</h5>
   <ul>
     {{#each posts}}
     <li>{{title}}<a href="./editpost/{{posts.id}}">edit</a></li>
