--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -2,7 +2,7 @@
 <h3>Come Back Soon!</h3>
 
 <script>
-  async function logOut() {
+  function logOut() {
     localStorage.removeItem('username')
     localStorage.removeItem('token')
     location = '/public/index.html'
