edit logout redirection

--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -5,7 +5,7 @@
   function logOut() {
     localStorage.removeItem('username')
     localStorage.removeItem('token')
-    location = '/public/index.html'
+    location = '/'
   }
 
   logOut();
