--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,7 +1,7 @@
 <h1>Blog About IT</h1>
 <form>
   <div class="mb-3">
-    <label class="form-control" for="title">Title:</label>
+    <label for="title">Title:</label>
     <input type="text" class="form-control" id="title" value="title">
   </div>
   <div class="mb-3">
