--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -33,7 +33,7 @@ function createPost() {
     event.preventDefault()
     createPost()
     alert('Post Created!')
-    document.getElementById('title').textContent = '';
-    document.getElementById('body').textContent = '';
+    document.getElementById('title').value = '';
+    document.getElementById('body').innerHTML = '';
   })
 </script>
