3rd times the charm

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -34,6 +34,6 @@ function createPost() {
     createPost()
     alert('Post Created!')
     document.getElementById('title').value = '';
-    document.getElementById('body').innerHTML = '';
+    document.getElementById('body').innerText = '';
   })
 </script>
