--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -2,7 +2,7 @@
 <form>
   <div class="mb-3">
     <label for="title">Title:</label>
-    <input type="text" class="form-control" id="title" value="title">
+    <input type="text" class="form-control" id="title">
   </div>
   <div class="mb-3">
     <label for="body">Body:</label>
