hotfix note routes

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -45,6 +45,7 @@
     let data = {
       body: document.getElementById('comment').value,
     }
+    console.log(data)
 
     let headers = {
       'Authorization': `Bearer ${localStorage.token}`
