--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -53,7 +53,7 @@
     }
 
     axios.post('/api/note/{{post.id}}', data, {headers: headers}).then(res => {
-      console.log(res)
+      location = '/post/{{post.id}}';
     }).catch(err => {
       console.log(err)
     })
