--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,7 @@
 <div class="card mb-3">
   <div class="card-header">
     <h1>{{title}}</h1>
-    <h4>Posted by {{post.user.username}} at {{createdAt}}</h4>
+    <h4>Posted by {{post.User.username}} at {{createdAt}}</h4>
   </div>
   <div class="card-body">
     <p>{{body}}</p>
