ln 13 change name

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@ year 2022.</p>
     <div class="fw-bold">
       <a href="/post/{{id}}">{{title}}</a>
     </div>
-    <sub>Posted by {{username}} and created on {{createdAt}}</sub>
+    <sub>Posted by {{'User.username'}} and created on {{createdAt}}</sub>
     <p>{{body}}</p>
   </div>
 </li>
