--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,11 +2,12 @@
   <h1>Dashboard</h1>
   <p>Hello, {{username}} </p>
   <a href="/newpost">Blog About IT</a>
-  <p>Post history</p>
+
+  <h4>Post history</h4>
   <h5>{{username}}'s Posts</h5>
   <ul>
     {{#each posts}}
-    <li>{{title}}<a href="./editpost/{{posts.id}}">edit</a></li>
+    <li>{{title}}<a href="./editpost/{{post.id}}">edit</a></li>
     {{/each}}
   </ul>
   {{else}}
