--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -48,8 +48,8 @@
       alert('This post has been deleted')
       location ='/'
     })
-    .catch (err) {
+    .catch (err => {
       console.log(err)
-    }
+    })
   })
 </script>
