--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -7,7 +7,7 @@
 <div class="mb-3">
   <textarea name="body" id="body"class="form-control">{{post.body}}{{updatedAt}}</textarea>
 </div>
-<button class="btn brn-info" id="submit">Submit</button>
+<button class="btn btn-info" id="submit">Submit</button>
 <button class="btn btn-danger" id="delete">Delete</button>
 </form>
 
