--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -2,10 +2,10 @@
 <form>
 <div class="mb-3">
   <label for="title" class="form-label">Title:</label>
-  <input type="text" name="title" id="title" value="{{post.title}}">
+  <input type="text" name="title" id="title" value="{{title}}">
 </div>
 <div class="mb-3">
-  <textarea name="body" id="body"class="form-control">{{post.body}}{{updatedAt}}</textarea>
+  <textarea name="body" id="body"class="form-control">{{body}}{{updatedAt}}</textarea>
 </div>
 <button class="btn btn-info" id="submit">Submit</button>
 <button class="btn btn-danger" id="delete">Delete</button>
