--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,7 +3,7 @@
 <div class="card mb-3">
   <div class="card-header">
     <h1>{{title}}</h1>
-    <h4>Posted by {{'User.username'}} at {{createdAt}}</h4>
+    <h4>Posted by {{'User.username'}} on {{createdAt}}</h4>
   </div>
   <div class="card-body">
     <p>{{body}}</p>
@@ -31,7 +31,7 @@
   <li class="list-group-item">
     <div class="ms-2 me auto">
       <div class="fw">{{body}}</div>
-      Posted by {{'User.username'}} at {{createdAt}}
+      Posted by {{'User.username'}} on {{createdAt}}
     </div>
   </li>
   {{/each}}
