--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 {{#if isLoggedIn}}
-  <h1>Dashboard</h1>
+  <h1>My South Park Fan Club Dashboard</h1>
   <p>Hello, {{username}} </p>
-  <a href="/newpost">Blog About IT</a>
+  <a href="/newpost">New South Park Post</a>
 
   <h4>Post history</h4>
   <h5>{{username}}'s Posts</h5>
