--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,4 @@
-<p class="text-center">This Project was developed as a means for registered users to have the opportunity to blog about tech related
-topics, view other users blog posts andcomment on those posts that compel them to do so. This project was
-developed as a part of the UCI 3 month full stack web development bootcamp at the close of year 2021, and start of
-year 2022.</p>
+<p class="text-center">Welcome to the Official South Park Fan Club. Here you can find a collection of users of like-minded interests. Posting and discussing all things South Park!</p>
 
 <ul class="list-group">
 {{#each posts}}
