--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<p class="text-center">Welcome to the Official South Park Fan Club. Here you can find a collection of users of like-minded interests. Posting and discussing all things South Park!</p>
+<p class="text-center"></p>
 
 <ul class="list-group">
 {{#each posts}}
