--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">SPFC</a>
+      <a class="navbar-brand" href="/">Blog About IT</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </nav>
-<img src="https://www.wallpaperpimper.com/wallpapers/5zfaxx/twitter/south-park.jpg">
+<img src="https://thumbs.dreamstime.com/b/information-technology-business-theme-banner-text-over-style-blue-background-42934526.jpg">
 
   <main class = "container">
   {{{ body }}}
