--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 {{#if isLoggedIn}}
-  <h1>My South Park Fan Club Dashboard</h1>
+  <h1 style="background-color: dodgerblue;">My Blog About IT Dashboard</h1>
   <p>Hello, {{username}} </p>
   <a href="/newpost">New Blog</a>
 
