--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -45,6 +45,8 @@
     let data = {
       body: document.getElementById('comment').value,
       pid: {{post.id}}
+      uid: {{user.id}}
+      username: {{note.User.username}}
     }
     console.log(data)
 
