syntax error buff

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -44,8 +44,8 @@
 
     let data = {
       body: document.getElementById('comment').value,
-      pid: {{post.id}}
-      uid: {{data.User.id}}
+      pid: {{post.id}},
+      uid: {{data.User.id}},
       username: {{data.User.username}}
     }
     console.log(data)
