attempt at posting user name with comment

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -31,7 +31,7 @@
   <li class="list-group-item">
     <div class="ms-2 me auto">
       <div class="fw">{{body}}</div>
-      Posted by {{'User.username'}} on {{createdAt}}
+      Posted by {{note.User.username}} on {{createdAt}}
     </div>
   </li>
   {{/each}}
@@ -45,8 +45,6 @@
     let data = {
       body: document.getElementById('comment').value,
       pid: {{post.id}},
-      uid: {{note.User.id}},
-      username: {{note.User.username}}
     }
     console.log(data)
 
