--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -31,7 +31,7 @@
   <li class="list-group-item">
     <div class="ms-2 me auto">
       <div class="fw">{{body}}</div>
-      Posted by {{User.username}} on {{createdAt}}
+      Posted by {{username}} on {{createdAt}}
     </div>
   </li>
   {{/each}}
